--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -238,6 +238,72 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
+  /project/{groupId}:
+    parameters:
+      - in: path
+        name: groupId
+        required: true
+        description: The groupId
+        schema:
+          type: string
+          format: uuid
+    get:
+      operationId: getProjectByGroupId
+      tags:
+        - Project
+      description: Return a project by groupId
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Project'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /schema/{projectId}:
+    parameters:
+      - in: path
+        name: projectId
+        required: true
+        description: The projectId
+        schema:
+          type: string
+          format: uuid
+    get:
+      operationId: getSchemaByProjectId
+      tags:
+        - Schema
+      description: Return schemas by projectId
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Schema'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
 components:
   schemas:
     Field:
