--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -2,8 +2,42 @@ openapi: "3.0.3"
 info:
   title: Mockez API
   description: Website MOCKEZ generates source for system testing.
-  version: 2.1.0
+  version: 2.2.0
 paths:
+  /user/login:
+    post:
+      operationId: login
+      tags:
+        - user
+      description: Login to MOCKEZ
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: boolean
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
   /sql-type:
     get:
       operationId: getSQLTypes
