--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -4,40 +4,6 @@ info:
   description: Website MOCKEZ generates source for system testing.
   version: 2.3.0
 paths:
-  /user/login:
-    post:
-      operationId: login
-      tags:
-        - user
-      description: Login to MOCKEZ
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                password:
-                  type: string
-      responses:
-        200:
-          description: The query is successful
-          content:
-            application/json:
-              schema:
-                type: boolean
-        400:
-          $ref: '#/components/responses/BadRequest'
-        401:
-          $ref: '#/components/responses/AuthenticationError'
-        403:
-          $ref: '#/components/responses/Unauthorized'
-        404:
-          $ref: '#/components/responses/NotFound'
-        500:
-          $ref: '#/components/responses/ServerError'
   /sql-type:
     get:
       operationId: getSQLTypes
@@ -250,7 +216,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/GenerateReq'
+              $ref: '#/components/schemas/GenerateRequestBody'
       responses:
         200:
           description: The query is successful
@@ -340,86 +306,32 @@ paths:
           $ref: '#/components/responses/ServerError'
 components:
   schemas:
-    Field:
+    Base:
       type: object
-      description: FIELD table
+      description: BASE structure
       properties:
-        id:
+        createDate:
+          type: string
+          format: date-time
+          description: audit created date
+        createdBy:
           readOnly: true
           type: string
           format: uuid
-          description: id of record
-        version:
-          readOnly: true
-          type: integer
-          description: version of record
-        name:
+          description: audit created by
+        modifiedDate:
           type: string
-          maxLength: 225
-          #          pattern: '^[a-z]$ | [_]'
-          description: name of field
-        sqlType:
-          $ref: '#/components/schemas/SQLType'
-        generateType:
-          $ref: '#/components/schemas/GenerateType'
-        option:
-          $ref: '#/components/schemas/Option'
-    SQLType:
-      type: object
-      description: SQLTYPE table
-      properties:
-        id:
+          format: date-time
+          description: audit modified date
+        modifiedBy:
           readOnly: true
           type: string
           format: uuid
-          description: id of record
+          description: audit modified by
         version:
           readOnly: true
           type: integer
-          description: version of record
-        code:
-          type: string
-          maxLength: 225
-          description: name of field
-        description:
-          type: string
-          maxLength: 1000
-          description: type in SQL
-        generateTypes:
-          type: array
-          items:
-            $ref: '#/components/schemas/GenerateType'
-    GenerateType:
-      type: object
-      description: GENERATETYPE table
-      properties:
-        id:
-          readOnly: true
-          type: string
-          format: uuid
-          description: id of record
-        version:
-          readOnly: true
-          type: integer
-          description: version of record
-        code:
-          type: string
-          maxLength: 225
-          description: code for generate
-        description:
-          type: string
-          maxLength: 1000
-          description: description for generate type
-        category:
-          $ref: '#/components/schemas/Category'
-        sources:
-          type: array
-          items:
-            $ref: '#/components/schemas/Source'
-        sqlTypes:
-          type: array
-          items:
-            $ref: '#/components/schemas/SQLType'
+          description: audit version
     Category:
       type: object
       description: CATEGORY table
@@ -428,11 +340,7 @@ components:
           readOnly: true
           type: string
           format: uuid
-          description: id of record
-        version:
-          readOnly: true
-          type: integer
-          description: version of record
+          description: id of category
         name:
           type: string
           maxLength: 225
@@ -440,30 +348,128 @@ components:
         description:
           type: string
           maxLength: 1000
-          description: description for generate type
+          description: description of category
         generateTypes:
           type: array
+          description: list generate types of category
           items:
             $ref: '#/components/schemas/GenerateType'
-    Source:
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    Field:
       type: object
-      description: Source table
+      description: FIELD table
       properties:
         id:
           readOnly: true
           type: string
           format: uuid
-          description: id of record
-        version:
-          readOnly: true
-          type: integer
-          description: version of record
-        value:
+          description: id of field
+        name:
           type: string
-          maxLength: 4096
-          description: value of source
+          maxLength: 225
+          description: name of field
+        sqlType:
+          $ref: '#/components/schemas/SQLType'
         generateType:
           $ref: '#/components/schemas/GenerateType'
+        option:
+          $ref: '#/components/schemas/Option'
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    GenerateType:
+      type: object
+      description: GENERATE-TYPE table
+      properties:
+        id:
+          readOnly: true
+          type: string
+          format: uuid
+          description: id of generate type
+        code:
+          type: string
+          maxLength: 225
+          description: code of generate type
+        description:
+          type: string
+          maxLength: 1000
+          description: description of generate type
+        category:
+          $ref: '#/components/schemas/Category'
+        sources:
+          type: array
+          description: list sources of generate type
+          items:
+            $ref: '#/components/schemas/Source'
+        sqlTypes:
+          type: array
+          description: list sql types of generate type
+          items:
+            $ref: '#/components/schemas/SQLType'
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    Group:
+      type: object
+      description: GROUP table
+      properties:
+        id:
+          readOnly: true
+          type: string
+          format: uuid
+          description: id of group
+        name:
+          type: string
+          maxLength: 225
+          description: name of group
+        description:
+          type: string
+          maxLength: 1000
+          description: description of group
+        users:
+          type: array
+          description: list users of group
+          items:
+            $ref: '#/components/schemas/User'
+        projects:
+          type: array
+          description: list projects of group
+          items:
+            $ref: '#/components/schemas/Project'
+        groupAccesses:
+          type: array
+          description: list group accesses of group
+          items:
+            $ref: '#/components/schemas/GroupAccess'
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    GroupAccess:
+      type: object
+      description: GROUP-ACCESS table
+      properties:
+        id:
+          $ref: '#/components/schemas/GroupAccessPK'
+        role:
+          $ref: '#/components/schemas/Role'
+        user:
+          $ref: '#/components/schemas/User'
+        group:
+          $ref: '#/components/schemas/Group'
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    GroupAccessPK:
+      type: object
+      description: GROUP-ACCESS primary key table
+      properties:
+        groupId:
+          readOnly: true
+          type: string
+          format: uuid
+          description: group id of group access
+        userId:
+          readOnly: true
+          type: string
+          format: uuid
+          description: user id of group access
     Option:
       type: object
       description: OPTION table
@@ -472,18 +478,232 @@ components:
           readOnly: true
           type: string
           format: uuid
-          description: id of record
-        version:
-          readOnly: true
-          type: integer
-          description: version of record
+          description: id of option
         blank:
           type: integer
           default: 0
+          minimum: 0
           maximum: 100
-          description: blank percent
+          description: blank of option
         field:
           $ref: '#/components/schemas/Field'
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    Project:
+      type: object
+      description: PROJECT table
+      properties:
+        id:
+          readOnly: true
+          type: string
+          format: uuid
+          description: id of project
+        name:
+          type: string
+          maxLength: 225
+          description: name of project
+        description:
+          type: string
+          maxLength: 1000
+          description: description of project
+        group:
+          $ref: '#/components/schemas/Group'
+        schemas:
+          type: array
+          description: list schemas of project
+          items:
+            $ref: '#/components/schemas/Schema'
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    Schema:
+      type: object
+      description: SCHEMA table
+      properties:
+        id:
+          readOnly: true
+          type: string
+          format: uuid
+          description: id of schema
+        name:
+          type: string
+          maxLength: 225
+          description: name of schema
+        description:
+          type: string
+          maxLength: 1000
+          description: description of schema
+        project:
+          $ref: '#/components/schemas/Project'
+        tables:
+          type: array
+          description: list tables of schema
+          items:
+            $ref: '#/components/schemas/Table'
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    Source:
+      type: object
+      description: SOURCE table
+      properties:
+        id:
+          readOnly: true
+          type: string
+          format: uuid
+          description: id of source
+        value:
+          type: string
+          maxLength: 4096
+          description: value of source
+        generateType:
+          $ref: '#/components/schemas/GenerateType'
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    SQLType:
+      type: object
+      description: SQL-TYPE table
+      properties:
+        id:
+          readOnly: true
+          type: string
+          format: uuid
+          description: id of sql type
+        code:
+          type: string
+          maxLength: 225
+          description: name of sql type
+        description:
+          type: string
+          maxLength: 1000
+          description: description of sql type
+        generateTypes:
+          type: array
+          description: list generate types of sql type
+          items:
+            $ref: '#/components/schemas/GenerateType'
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    Table:
+      type: object
+      description: TABLE table
+      properties:
+        id:
+          readOnly: true
+          type: string
+          format: uuid
+          description: id of table
+        name:
+          type: string
+          maxLength: 225
+          description: name of table
+        description:
+          type: string
+          maxLength: 1000
+          description: description of table
+        schema:
+          $ref: '#/components/schemas/Schema'
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    User:
+      type: object
+      description: USER table
+      properties:
+        id:
+          readOnly: true
+          type: string
+          format: uuid
+          description: id of user
+        username:
+          type: string
+          format: email
+          maxLength: 225
+          description: username of user
+        password:
+          type: string
+          maxLength: 225
+          description: password of user
+        name:
+          type: string
+          maxLength: 225
+          description: name of user
+        phone:
+          type: string
+          maxLength: 12
+          description: phone of user
+        gender:
+          $ref: '#/components/schemas/Gender'
+        address:
+          type: string
+          maxLength: 225
+          description: address of user
+        dob:
+          type: string
+          format: date-time
+          description: dob of user
+        isAccountNonExpired:
+          type: boolean
+          description: account non-expired
+        isAccountNonLocked:
+          type: boolean
+          description: account non-locked
+        isCredentialsNonExpired:
+          type: boolean
+          description: account credentials non-expired
+        isEnabled:
+          type: boolean
+          description: account enabled
+        grantedAuthorities:
+          type: string
+          description: list of allowed authorities
+        group:
+          $ref: '#/components/schemas/Group'
+        groupAccesses:
+          type: array
+          description: list group accesses of user
+          items:
+            $ref: '#/components/schemas/GroupAccess'
+      allOf:
+        - $ref: '#/components/schemas/Base'
+    Gender:
+      type: string
+      enum:
+        - MALE
+        - FEMALE
+        - OTHER
+      description: |
+        Gender:
+        * MALE - male
+        * FEMALE - female
+        * OTHER - other
+    GenerateRequestBody:
+      type: object
+      description: body of generate request
+      properties:
+        row:
+          readOnly: true
+          type: integer
+          default: 0
+          minimum: 0
+          maximum: 1000
+          description: row of source
+        fields:
+          readOnly: true
+          type: array
+          description: list fields of generate req
+          items:
+            $ref: '#/components/schemas/Field'
+    Role:
+      type: object
+      enum:
+        - GROUP_ADMIN
+        - GROUP_ASSOCIATE
+        - USER
+        - ADMIN
+      description: |
+        Mockez role:
+        * GROUP_ADMIN - group admin.
+        * GROUP_ASSOCIATE - group associate.
+        * USER - user.
+        * ADMIN - admin.
     Error:
       description: Schema for error response body
       type: object
@@ -522,182 +742,6 @@ components:
             * ACTION_NOT_ALLOWED - the action not allowed.
         additionalMessage:
           type: string
-    GenerateReq:
-      type: object
-      description: The body of generate request
-      properties:
-        row:
-          readOnly: true
-          type: integer
-          default: 0
-          maximum: 1000
-          description: Row number of source
-        fields:
-          readOnly: true
-          type: array
-          description: Fields of table
-          items:
-            $ref: '#/components/schemas/Field'
-    User:
-      type: object
-      description: USER table
-      properties:
-        id:
-          readOnly: true
-          type: string
-          format: uuid
-          description: id of table
-        version:
-          readOnly: true
-          type: integer
-          description: version of record
-        email:
-          type: string
-          format: email
-          maxLength: 225
-          description: email of user
-        password:
-          type: string
-          maxLength: 225
-          description: password of user
-        name:
-          type: string
-          maxLength: 225
-          description: name of user
-        gender:
-          type: boolean
-          description: gender of user
-        address:
-          type: string
-          maxLength: 225
-          description: address of user
-        dob:
-          type: string
-          format: date-time
-          maxLength: 225
-          description: dob of user
-        phone:
-          type: string
-          maxLength: 12
-          description: phone of user
-        description:
-          type: string
-          maxLength: 1000
-          description: description for generate type
-        role:
-          type: string
-          maxLength: 100
-          description: role for generate type
-        groupId:
-          type: array
-          items:
-            $ref: '#/components/schemas/Group'
-    Group:
-      type: object
-      description: GROUP table
-      properties:
-        id:
-          readOnly: true
-          type: string
-          format: uuid
-          description: id of table
-        version:
-          readOnly: true
-          type: integer
-          description: version of record
-        name:
-          type: string
-          maxLength: 225
-          description: name of group
-        description:
-          type: string
-          maxLength: 1000
-          description: description for group
-        projects:
-          type: array
-          items:
-            $ref: '#/components/schemas/Project'
-        users:
-          type: array
-          items:
-            $ref: '#/components/schemas/User'
-    Project:
-      type: object
-      description: PROJECT table
-      properties:
-        id:
-          readOnly: true
-          type: string
-          format: uuid
-          description: id of table
-        version:
-          readOnly: true
-          type: integer
-          description: version of record
-        name:
-          type: string
-          maxLength: 225
-          description: name of project
-        description:
-          type: string
-          maxLength: 1000
-          description: description for project
-        group:
-          $ref: '#/components/schemas/Group'
-        schemas:
-          type: array
-          items:
-            $ref: '#/components/schemas/Schema'
-    Schema:
-      type: object
-      description: SCHEMA table
-      properties:
-        id:
-          readOnly: true
-          type: string
-          format: uuid
-          description: id of table
-        version:
-          readOnly: true
-          type: integer
-          description: version of record
-        name:
-          type: string
-          maxLength: 225
-          description: name of schema
-        description:
-          type: string
-          maxLength: 1000
-          description: description for schema
-        project:
-          $ref: '#/components/schemas/Project'
-        tables:
-          type: array
-          items:
-            $ref: '#/components/schemas/Table'
-    Table:
-      type: object
-      description: TABLE table
-      properties:
-        id:
-          readOnly: true
-          type: string
-          format: uuid
-          description: id of table
-        version:
-          readOnly: true
-          type: integer
-          description: version of record
-        name:
-          type: string
-          maxLength: 225
-          description: name of table
-        description:
-          type: string
-          maxLength: 1000
-          description: description for table
-        schema:
-          $ref: '#/components/schemas/Schema'
   responses:
     NotFound:
       description: The specified resource was not found
