MOC-57: UI for project, schema and table

--- a/mockez-back/src/main/resources/application.yaml
+++ b/mockez-back/src/main/resources/application.yaml
@@ -10,5 +10,5 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     open-in-view: false
