--- a/mockez-front/tsconfig.json
+++ b/mockez-front/tsconfig.json
@@ -22,7 +22,7 @@
       "es2020",
       "dom"
     ],
-//    "strictPropertyInitialization": false,
+    "strictPropertyInitialization": false,
     "paths": {
       "@app/*": [
         "app/*"
