--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -354,16 +354,39 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /schema/{projectId}:
-    parameters:
-      - in: path
-        name: projectId
-        required: true
-        description: The projectId
-        schema:
-          type: string
-          format: uuid
+    delete:
+      operationId: deleteProject
+      tags:
+        - Project
+      description: Return id of deleted project
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: string
+                format: uuid
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /schema:
     get:
+      parameters:
+        - in: query
+          name: projectId
+          required: true
+          description: The projectId
+          schema:
+            type: string
+            format: uuid
       operationId: getSchemasByProject
       tags:
         - Schema
@@ -377,6 +400,67 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Schema'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+    post:
+      operationId: saveOrUpdateSchema
+      tags:
+        - Schema
+      description: Save or Update a Schema
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Schema'
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: string
+                format: uuid
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /schema/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The schemaId
+        schema:
+          type: string
+          format: uuid
+    delete:
+      operationId: deleteSchema
+      tags:
+        - Schema
+      description: Return id of deleted schema
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: string
+                format: uuid
         400:
           $ref: '#/components/responses/BadRequest'
         401:
@@ -412,13 +496,77 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
+  /table:
+    get:
+      parameters:
+        - in: query
+          name: schemaId
+          required: true
+          description: The schemaId
+          schema:
+            type: string
+            format: uuid
+      operationId: getTablesBySchema
+      tags:
+        - Table
+      description: Return tables by schema
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Table'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /table/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The table ID
+        schema:
+          type: string
+          format: uuid
+    get:
+      operationId: getTable
+      tags:
+        - Table
+      description: Return table
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Table'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
 components:
   schemas:
     Base:
       type: object
       description: BASE structure
       properties:
-        createDate:
+        createdDate:
           type: string
           format: date-time
           description: audit created date
@@ -493,6 +641,8 @@ components:
           $ref: '#/components/schemas/GenerateType'
         option:
           $ref: '#/components/schemas/Option'
+        table:
+          $ref: '#/components/schemas/Table'
       allOf:
         - $ref: '#/components/schemas/Base'
     GenerateType:
@@ -622,11 +772,11 @@ components:
           description: name of project
         summary:
           type: string
-          maxLength: 255
+          maxLength: 1000
           description: summary of project
         description:
           type: string
-          maxLength: 1000
+          maxLength: 4096
           description: description of project
         group:
           $ref: '#/components/schemas/Group'
@@ -723,6 +873,11 @@ components:
           description: description of table
         schema:
           $ref: '#/components/schemas/Schema'
+        fields:
+          type: array
+          description: list fields of table
+          items:
+            $ref: '#/components/schemas/Field'
       allOf:
         - $ref: '#/components/schemas/Base'
     User:
