--- a/mockez-front/package.json
+++ b/mockez-front/package.json
@@ -43,6 +43,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "@angular/cdk": "^7.0.0"
   }
 }
