--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -35,6 +35,36 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
+  /user:
+    put:
+      operationId: updateUser
+      tags:
+        - User
+      description: update user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: string
+                format: uuid
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
   /sql-type:
     get:
       operationId: getSQLTypes
@@ -899,6 +929,10 @@ components:
           maxLength: 255
           description: password of user
         name:
+          type: string
+          maxLength: 255
+          description: name of user
+        bio:
           type: string
           maxLength: 255
           description: name of user
