--- a/mockez-front/package.json
+++ b/mockez-front/package.json
@@ -24,12 +24,15 @@
     "file-saver": "^2.0.5",
     "js2xmlparser": "^5.0.0",
     "json-sql": "^0.5.0",
+    "marked": "^4.0.17",
+    "ngx-markdown": "^14.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
+    "@angular/cdk": "^7.0.0",
     "@angular/cli": "~14.2.1",
     "@angular/compiler-cli": "^14.0.0",
     "@types/file-saver": "^2.0.5",
@@ -44,6 +47,6 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "~4.7.2",
-    "@angular/cdk": "^7.0.0"
+    "@types/marked": "^4.0.3"
   }
 }
