MOC-18: [BE] Maintain API showGenerate() has blank. Rename showGenerate to generateWithTable.

--- a/mocker-back/src/main/resources/static/mocker.yaml
+++ b/mocker-back/src/main/resources/static/mocker.yaml
@@ -556,7 +556,7 @@ paths:
         schema:
           type: number
     post:
-      operationId: showGenerate
+      operationId: generateWithTable
       tags:
         - Generate
       description: Show generate random row in table
