--- a/mocker-front/package.json
+++ b/mocker-front/package.json
@@ -1,5 +1,10 @@
 {
   "name": "mocker-front",
+  "author": {
+    "name": "Mocker",
+    "email": "mocker.service@gmail.com"
+  },
+  "license": "Ho Chi Minh city University of Technology and Education",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,7 +16,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
-    "@angular/cdk": "^15.2.2",
+    "@angular/cdk": "^14.0.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
@@ -22,7 +27,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "file-saver": "^2.0.5",
-    "marked": "^4.0.17",
+    "leader-line": "^1.0.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -33,7 +38,6 @@
     "@angular/compiler-cli": "^14.0.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
-    "@types/marked": "^4.0.3",
     "autoprefixer": "^10.4.12",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
