MOC-60: Create list UI for schemas, groups, projects and people.

--- a/mocker-front/angular.json
+++ b/mocker-front/angular.json
@@ -17,7 +17,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "allowedCommonJsDependencies": ["file-saver"],
+            "allowedCommonJsDependencies": [
+              "file-saver"
+            ],
             "outputPath": "dist/mocker-front",
             "index": "src/index.html",
             "main": "src/main.ts",
