--- a/mocker-back/src/main/resources/static/mocker.yaml
+++ b/mocker-back/src/main/resources/static/mocker.yaml
@@ -4,6 +4,29 @@ info:
   description: Website MOCKER generates source for system testing.
   version: 3.0.1
 paths:
+  /auth/google:
+    get:
+      operationId: loginWithGoogle
+      tags:
+        - Auth
+      description: Login with Google
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
   /auth/send-verification-code:
     post:
       operationId: sendVerificationCode
