--- a/mocker-back/.gitignore
+++ b/mocker-back/.gitignore
@@ -1,8 +1,9 @@
 HELP.md
 #target/
 !.mvn/wrapper/maven-wrapper.jar
-**/src/main/**/target/
-**/src/test/**/target/
+!**/src/main/**/target/
+!**/src/test/**/target/
+/target
 
 ### STS ###
 .apt_generated
